WIP results page

--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -7,6 +7,9 @@
     margin: 0 auto;
     width: 90%;
     max-width: 40rem;
+}
+
+.navbar-container {
     display: flex;
     justify-content: space-between;
 }
