--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,9 @@
 $main-color: #FFE600;
 $body-bg: #EEEEEE;
+$body-color: #222222;
+$body-light-color: #666666;
 $container-bg: #FFFFFF;
+
 
 $navbar-padding: 0.5rem;
 $navbar-logo-width: 3rem;
