product list details

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,7 @@
 $main-color: #FFE600;
+$shipping-color: #39b54a;
 $body-bg: #EEEEEE;
-$body-color: #222222;
+$body-color: #333;
 $body-light-color: #666666;
 $container-bg: #FFFFFF;
 
@@ -8,7 +9,7 @@ $container-bg: #FFFFFF;
 $navbar-padding: 0.5rem;
 $navbar-logo-width: 3rem;
 
-$general-padding: 0.25rem;
+$general-padding: 0.5rem;
 $general-border-radius: 0.25rem;
 
 $separator-border-color: #EEEEEE;
