--- a/src/assets/styles/results.scss
+++ b/src/assets/styles/results.scss
@@ -1,11 +1,36 @@
 @import "variables";
 
 .item {
+    position: relative;
     padding: $general-padding;
     border-bottom: 1px solid $separator-border-color;
+    border-radius: $general-border-radius;
     display: flex;
+    transition: all 300ms ease-in-out;
+
     &:last-child {
         border-bottom: none;
+    }
+
+    &:hover {
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
+    }
+
+    a {
+        text-decoration: none;
+        color: $body-color;
+    }
+
+    .stretched-link::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        pointer-events: auto;
+        content: "";
+        background-color: rgba(0,0,0,0);
     }
 
     img {
@@ -13,6 +38,33 @@
         width: $results-image-size;
         height: $results-image-size;
         object-fit: cover;
-        overflow: hidden;
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
+
+    .item-content {
+        flex-grow: 1;
+        .product-information {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .product-price {
+            font-size: 1.3rem;
+        }
+
+        .product-shipping {
+            color: $shipping-color;
+            padding: $general-padding;
+        }
+
+        .product-condition {
+            flex-grow: 1;
+            text-align: right;
+        }
+        .product-title {
+            margin: 0;
+            font-weight: normal;
+        }
     }
 }
