wip update item details

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,10 +1,11 @@
 $main-color: #FFE600;
 $shipping-color: #39b54a;
-$body-bg: #EEEEEE;
 $body-color: #333;
 $body-light-color: #666666;
-$container-bg: #FFFFFF;
+$button-color: #3483fa;
 
+$body-bg: #EEEEEE;
+$container-bg: #FFFFFF;
 
 $navbar-padding: 0.5rem;
 $navbar-logo-width: 3rem;
