--- a/src/assets/styles/ItemDetails.scss
+++ b/src/assets/styles/ItemDetails.scss
@@ -1,23 +1,31 @@
 @import "variables";
+@import "mixins";
+
+@include tablet-up {
+    .row {
+        display: flex;
+    }
+    .col-picture, .col-details {
+        width: 50%;
+    }
+}
+
+@include desktop-up {
+    .col-picture {
+        width: 75%;
+    }
+    .col-details {
+        width: 25%;
+    }
+    .product-image {
+        height: 500px;
+    }
+
+}
 
 .product-image {
     width: 100%;
     object-fit: contain;
-}
-
-@media only screen and (min-width: 768px) {
-    .row {
-        display: flex;
-    }
-    .col-25 {
-        width: 25%;
-    }
-    .col-75 {
-        width: 75%;
-    }
-    .col-50 {
-        width: 50%;
-    }
 }
 
 .details {
