--- a/src/assets/styles/Product.scss
+++ b/src/assets/styles/Product.scss
@@ -43,8 +43,10 @@
     text-align: center;
     display: block;
     font-weight: normal;
+    font-size: 1.25rem;
     background-color: $button-color;
     color: #FFF;
+    border: 0;
     transition: all 300ms ease-in-out;
     border-radius: $general-border-radius;
     text-decoration: none;
