refactor home style

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -34,3 +34,9 @@ body {
     background-color: $container-bg;
     border-radius: $general-border-radius;
 }
+
+.home {
+    p {
+        padding: $general-padding;
+    }
+}
